[gd_scene load_steps=6 format=3 uid="uid://iixradab3o72"]

[ext_resource type="Script" uid="uid://buoimofx7sb64" path="res://scripts/prefabs/mesh_viewer.gd" id="1_wb5as"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5vme2"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_psp0a"]
sky_material = SubResource("ProceduralSkyMaterial_5vme2")

[sub_resource type="Environment" id="Environment_6aqm7"]
background_mode = 2
sky = SubResource("Sky_psp0a")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_wb5as"]

[node name="MeshViewer" type="SubViewportContainer"]
texture_filter = 1
offset_right = 500.0
offset_bottom = 500.0
stretch = true
script = ExtResource("1_wb5as")
rotations_per_second = 0.3
cam_distance = 5.0
cam_pitch = -0.1

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(500, 500)
render_target_update_mode = 4

[node name="3DWorld" type="Node3D" parent="SubViewport"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport/3DWorld"]
environment = SubResource("Environment_6aqm7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport/3DWorld"]
transform = Transform3D(0.707107, -0.541675, 0.454519, 0, 0.642788, 0.766044, -0.707107, -0.541675, 0.454519, 0, 0, 0)
shadow_enabled = true

[node name="CamPivot" type="Node3D" parent="SubViewport/3DWorld"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="SubViewport/3DWorld/CamPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 35.0
size = 2.905

[node name="MeshHolder" type="Node3D" parent="SubViewport/3DWorld"]
unique_name_in_owner = true
transform = Transform3D(0.962045, 0, -0.272887, 0, 1, 0, 0.272887, 0, 0.962045, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/3DWorld/MeshHolder"]
mesh = SubResource("BoxMesh_wb5as")
